# zuspec-fe-pss

./: .envrc  .gitignore  AGENTS.md  Agents.md  CMakeLists.txt  ivpm.yaml  out  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
ast/: activity.yaml  constraint.yaml  coretypes.yaml  datatype.yaml  exec.yaml  expr.yaml  extension.yaml  field.yaml  functions.yaml  monitor.yaml
docs/: Makefile  api.rst  ast_usage_guide.rst  conf.py  index.rst  pss30_api.rst  pss30_architecture.rst  pss30_features.rst  pss30_migration.rst  pss_to_sv_user_guide.md  quickstart.rst  reference_api_docs.rst  sv_runtime_library.md
examples/: README.md  ast_to_ir_demo.py
python/: core.pyx
python/zuspec_fe_pss/: ast.pxd  ast.pyi  ast_decl.pxd  parser.py
python/zuspec_fe_pss/utils/: symbol_children_scope_util.py  symbol_scope_util.py  symbol_type_scope_util.py
resources/: Portable_Test_Stimulus_Standard_v3.0.md  SystemRDL_2.0_Jan2018.md
scripts/: build_linux.sh  gen_ast.py  grammar_audit.py
src/: AstBuilder.cpp  AstBuilder.h  AstBuilderInt.cpp  AstBuilderInt.h  BuiltinsFactory.cpp  CMakeLists.txt  PSSExprLexer.g4  PSSExprParser.g4  PSSLexer.g4  PSSParser.g4  ParseProfileInfo.cpp  ParseProfileInfo.h  TaskApplyOverlay.cpp  TaskApplyTypeExtensions.cpp  TaskBuildParamValList.cpp  TaskBuildParamValList.h  TaskBuildSymbolTree.cpp  TaskBuildSymbolTree.h  TaskCollectDeclarations.cpp  TaskLinkActionCompRefFields.cpp  TaskResolveRef.cpp  TaskResolveRefs.cpp  TaskResolveRefs.h  TaskResolveRootRef.cpp
tests/: conftest.py
tests/python/: conftest.py  test_aggregate_literals.py  test_ast_to_ir.py  test_collections_ast_to_ir.py  test_component_arrays_and_functions.py  test_constraints_ast_to_ir.py  test_expr_ir.py  test_expr_phase3_ir.py  test_expr_translation.py  test_helpers.py  test_inheritance_and_exec.py  test_link_error.py  test_load.py  test_lookup.py  test_package_and_yield.py  test_parser.py  test_profiling.py  test_register_ast_to_ir.py  test_register_phase3.py  test_register_phase5.py  test_register_phase6.py  test_scalar_types_ast_to_ir.py  test_stmt_expr.py  test_stmt_translation.py  test_string_and_builtins.py
tests/python/cli/: __init__.py  test_cli_parse.py  test_diagnostics.py  test_output_formats.py  (+2 more)
tests/src/: TestAnnotations.cpp  TestDocString.cpp  TestFunctionDecl.cpp  TestPSS30Grammar.cpp  TestPSS30Grammar.h  TestProceduralDataTypes.cpp  TestProceduralDataTypes.h  TestProceduralMacros.cpp  TestProceduralStmts.cpp  TestProceduralVarResolution.cpp  TestProceduralVarResolution.h
tests/sv/: test_zsp_rt_pkg.py
tests/unit/: conftest.py  test_aggregate_literals.py  test_ast_to_ir.py  test_collections_ast_to_ir.py  test_component_arrays_and_functions.py  test_constraints_ast_to_ir.py  test_expr_translation.py  test_helpers.py  test_inheritance_and_exec.py  test_package_and_yield.py  test_register_ir.py  test_register_phase5.py  test_scalar_types_ast_to_ir.py  test_stmt_ir.py  test_stmt_translation.py  test_string_and_builtins.py
(+131 files in other folders)
