[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zuspec-fe-pss"
version = "0.1.0"
description = "PSS AST to Zuspec IR translation built on pssparser"
authors = [
  { name = "Matthew Ballance", email = "matt.ballance@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
  "pssparser",
  "zuspec-dataclasses",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
