[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zuspec-fe-pss"
dynamic = ["version"]
description = "PSS AST to Zuspec IR translation built on pssparser"
authors = [
  { name = "Matthew Ballance", email = "matt.ballance@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
  "pssparser",
  "zuspec-dataclasses",
]

[tool.setuptools.dynamic]
version = {attr = "zuspec.fe.pss.__version__.version"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
